--- a/animations-initial.css
+++ b/animations-initial.css
@@ -38,4 +38,6 @@ noscript ~ * [data-anim] {
   opacity: 1 !important;
   transform: none !important;
 }
-/* add this near top of body <noscript><!-- This empty noscript tag enables CSS fallbacks --></noscript>
+/* add this near top of body <noscript><!-- This empty noscript tag enables CSS fallbacks --></noscript> */
+
+/* Testing this entry point */
